# libgoa-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs
goa/: Cargo.toml  Gir.toml  README.md
goa-sys/: Cargo.toml  Gir.toml  build.rs
goa-sys/src/: lib.rs
goa-sys/tests/: abi.rs  constant.c  layout.c
goa/goa-sys/: Cargo.toml  Gir.toml  README.md
goa/goa-sys/src/: lib.rs
goa/goa-sys/src/auto/: versions.txt
goa/goa-sys/tests/: abi.rs  constant.c  layout.c  manual.h
goa/src/auto/: account.rs  calendar.rs  chat.rs  client.rs  contacts.rs  documents.rs  enums.rs  exchange.rs  files.rs  mail.rs  manager.rs  maps.rs  media_server.rs  mod.rs  music.rs  oauth2_based.rs  oauth_based.rs  object.rs  object_manager_client.rs  password_based.rs  photos.rs  printers.rs  read_later.rs  ticketing.rs  todo.rs  versions.txt
src/: lib.rs
src/auto/: account.rs  calendar.rs  chat.rs  client.rs  contacts.rs  documents.rs  enums.rs  exchange.rs  files.rs  mail.rs  manager.rs  maps.rs  media_server.rs  mod.rs  music.rs  oauth2_based.rs  oauth_based.rs  object.rs  object_manager_client.rs  password_based.rs  photos.rs  printers.rs  read_later.rs  ticketing.rs  todo.rs  versions.txt
