[package]
name = "goa-sys"
version = "0.0.1"
authors = ["Boiethios <felix-libgoa@daudre-vignier.fr>"]
license = "MIT/Apache-2.0"

description = "The FFI bindings for libgoa."
repository = "https://gitlab.gnome.org/World/Rust/libgoa-rs"
categories = ["external-ffi-bindings"]
keywords = ["GNOME", "online", "accounts", "bindings"]

edition = "2015"
links = "goa"

[lib]
name = "goa_sys"

[dependencies]
libc = "0.2"

gio-sys = "0.9"
glib-sys = "0.9"
gobject-sys = "0.9"

[build-dependencies]
pkg-config = "0.3.7"

[dev-dependencies]
shell-words = "0.1.0"
tempdir = "0.3"

[features]
v3_6 = []
v3_8 = ["v3_6"]
v3_12 = ["v3_8"]
v3_14 = ["v3_12"]
v3_16 = ["v3_14"]
v3_18 = ["v3_16"]
v3_26 = ["v3_18"]
dox = []
