[package]
name = "goa-sys"
version = "0.0.3"
authors = ["Boiethios <felix-libgoa@daudre-vignier.fr>"]
license = "MIT/Apache-2.0"
description = "The FFI bindings for the GNOME Online Accounts library."
repository = "https://gitlab.gnome.org/World/Rust/libgoa-rs"
documentation = "https://docs.rs/goa-sys"
categories = ["external-ffi-bindings"]
keywords = ["GNOME", "online", "accounts", "bindings"]
edition = "2021"
build = "build.rs"
links = "goa"

[lib]
name = "goa_sys"

[dependencies]
libc = "0.2"

[dependencies.gio]
package = "gio-sys"
version = "0.18"

[dependencies.glib]
package = "glib-sys"
version = "0.18"

[dependencies.gobject]
package = "gobject-sys"
version = "0.18"

[build-dependencies]

[dev-dependencies]

[features]
v3_6 = []
v3_8 = ["v3_6"]
v3_12 = ["v3_8"]
v3_14 = ["v3_12"]
v3_16 = ["v3_14"]
v3_18 = ["v3_16"]
v3_26 = ["v3_18"]
