[package]
name = "goa-sys"
version = "0.0.3"
authors = ["Boiethios <felix-libgoa@daudre-vignier.fr>"]
license = "MIT/Apache-2.0"
description = "The FFI bindings for the GNOME Online Accounts library."
repository = "https://gitlab.gnome.org/World/Rust/libgoa-rs"
documentation = "https://docs.rs/goa-sys"
categories = ["external-ffi-bindings"]
keywords = ["GNOME", "online", "accounts", "bindings"]
edition = "2021"
build = "build.rs"
links = "goa"

[package.metadata.system-deps.goa_1_0]
name = "goa-1.0"
version = "1"

[package.metadata.system-deps.goa_1_0.v3_6]
version = "3.6"

[package.metadata.system-deps.goa_1_0.v3_8]
version = "3.8"

[package.metadata.system-deps.goa_1_0.v3_12]
version = "3.12"

[package.metadata.system-deps.goa_1_0.v3_14]
version = "3.14"

[package.metadata.system-deps.goa_1_0.v3_16]
version = "3.16"

[package.metadata.system-deps.goa_1_0.v3_18]
version = "3.18"

[package.metadata.system-deps.goa_1_0.v3_26]
version = "3.26"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]
all-features = true

[lib]
name = "goa_sys"

[dependencies]
libc = "0.2"
gio-sys = "0.18"
glib-sys = "0.18"
gobject-sys = "0.18"

[build-dependencies]
system-deps = "6"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
v3_6 = []
v3_8 = ["v3_6"]
v3_12 = ["v3_8"]
v3_14 = ["v3_12"]
v3_16 = ["v3_14"]
v3_18 = ["v3_16"]
v3_26 = ["v3_18"]
